--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "chalk": "~0.4.0",
     "lodash": "^2.4.1",
+    "underscore.string": "^2.3.3",
     "yeoman-generator": "~0.16.0",
     "yosay": "^0.1.0"
   },
